delete bug squashing

--- a/front_end/stylesheet.css
+++ b/front_end/stylesheet.css
@@ -42,6 +42,13 @@ img {
   height: 95vw;
 }
 
+.scroll-div-2 {
+  overflow: scroll;
+  overflow-y: scroll;
+  max-height: 82vh;
+  height: 82vw;
+}
+
 .card.octothorpe{
   width: 50vw;
   margin: 3vh;
